--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "zapbook",
   "version": "0.1.0",
+  "homepage": "https://myusername.github.io/my-app",
+  "predeploy": "npm run build",
+"deploy": "gh-pages -d build",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
